creating delete channel claim handler